--- a/styles/app.css
+++ b/styles/app.css
@@ -52,6 +52,23 @@ body {
 	margin: 0 auto;
 }
 
+.titleWrapper {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 102px;
+  color: #fff;
+  overflow: hidden;
+}
+
+#title {
+	position: absolute;
+	top: 40%;
+	left: 59px;
+	font-family: 'Roboto', sans-serif;
+}
+
 .fixedContainer {
   position: absolute;
   width: 90%;
