--- a/styles/app.css
+++ b/styles/app.css
@@ -55,7 +55,7 @@ body {
 }
 
 span.menu {
-	width: 5%;
+	width: 46px;
 	height: 60px;
 	display: inline-block;
 }
@@ -118,7 +118,7 @@ span.menu:after {
 	position: relative;
 	float: left;
 	left: 46px;
-	width: 60%;
+	width: 54%;
 	font-family: 'Roboto', sans-serif;
 }
 
@@ -128,7 +128,7 @@ span.menu:after {
 	overflow: hidden;
 	max-height: 0px;
 	-webkit-transition: max-height 1s linear;
-	-moz-transition: max-height 1s linear;
+	-moz-transition: max-height 1s linear;117
 }
 
 .active {
@@ -149,6 +149,7 @@ span.menu:after {
 .contentNews {
 	width: 90%;
 	text-align: justify;
+  margin: 0 auto 15px auto;
 	font-weight: 300;
 	line-height: 1.2;
 	font-family: 'Roboto', sans-serif;
@@ -170,6 +171,21 @@ span.menu:after {
 }
 
 
+@media screen and (min-width: 320px) {
+	.contentImage {
+		float: left;
+		margin-right: 37px;
+		margin-bottom: 15px;
+	}
+}
+
+@media screen and (min-width: 750px) {
+	.contentImage {
+		float: left;
+		margin-right: 37px;
+		margin-bottom: 0px;
+	}
+}
 
 
 
